--- a/gifcolor.css
+++ b/gifcolor.css
@@ -1,11 +1,11 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #cceecc; /* */
-  --color-2: #e3f1af; /* */
-  --color-3: #4bc84b; /* main color */
-  --color-4: #71da35; /* sub  color */
-  --color-5: #cff1af; /* */
+  --color-1: #ff0000; /* 빨강 */
+  --color-2: #fffb00; /* 노랑 */
+  --color-3: #00ff4d; /* main color, 초록 */
+  --color-4: #0b00ff; /* sub  color, 파랑 */
+  --color-5: #ff00fe; /* 핑크 */
 
   --logo-URL: url("https://4.bp.blogspot.com/-ih1-uFmH3AQ/XHkGc5zGWhI/AAAAAAAAGd0/HUSUwI1Rj3UhvANiu2VKy0-5tgw5YaR8gCLcBGAs/s1600/%25EB%25AA%25A8%25EB%25B0%2594%25EC%259D%25BC%2B%25EB%25A1%259C%25EA%25B3%25A0%2B4.png");
   --logo-Width: 158px;
