--- a/gifcolor.css
+++ b/gifcolor.css
@@ -1,7 +1,7 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #ff0000; /* 빨강 */
+  --color-1: #ff0000; /* 빨강1 */
   --color-2: #fffb00; /* 노랑 */
   --color-3: #00ff4d; /* main color, 초록 */
   --color-4: #0b00ff; /* sub  color, 파랑 */
