--- a/gifcolor3.css
+++ b/gifcolor3.css
@@ -1,7 +1,7 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #ff0000; /* */
+  --color-1: #ffffff; /* */
   --color-2: #e3f1af; /* */
   --color-3: #4bc84b; /* main color */
   --color-4: #71da35; /* sub  color */
