--- a/gifcolo8.css
+++ b/gifcolo8.css
@@ -3,7 +3,7 @@
 
   --color-1: #ffffff; /* 카테고리 */
   --color-2: #d0ffca; /* 로고배경 공지배경 */
-  --color-3: #4bc84b; /* main color */
+  --color-3: #ff0000; /* main color */
   --color-4: #71da35; /* sub  color */
   --color-5: #cff1af; /* */
 
