--- a/gifcolor2.css
+++ b/gifcolor2.css
@@ -1,8 +1,8 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #cceecc; /* */
-  --color-2: #e3f1af; /* */
+  --color-1: #ffffff; /* */
+  --color-2: #d0ffca; /* */
   --color-3: #4bc84b; /* main color */
   --color-4: #71da35; /* sub  color */
   --color-5: #cff1af; /* */
