--- a/gifcolor3.css
+++ b/gifcolor3.css
@@ -2,7 +2,7 @@
   --color-0: #ffffff; /* box color */
 
   --color-1: #ffffff; /* */
-  --color-2: #d0ffca; /* */
+  --color-2: #ffffff; /* */
   --color-3: #4bc84b; /* main color */
   --color-4: #71da35; /* sub  color */
   --color-5: #cff1af; /* */
