--- a/gifcolor4.css
+++ b/gifcolor4.css
@@ -1,8 +1,8 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #ffffff; /* */
-  --color-2: #ffffff; /* */
+  --color-1: #ffffff; /* 로고배경 */
+  --color-2: #ffffff; /* 로고배경 공지배경 */
   --color-3: #4bc84b; /* main color */
   --color-4: #71da35; /* sub  color */
   --color-5: #cff1af; /* */
