--- a/gifcolor5.css
+++ b/gifcolor5.css
@@ -1,11 +1,11 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #ffffff; /* 로고배경 */
-  --color-2: #ffffff; /* 로고배경 공지배경 */
-  --color-3: #4bc84b; /* main color */
-  --color-4: #71da35; /* sub  color */
-  --color-5: #cff1af; /* */
+  --color-1: #FFDEDD; /* 로고배경 */
+  --color-2: #90A5C7; /* 로고배경 공지배경 */
+  --color-3: #F1B4AF; /* main color */
+  --color-4: #F1CACA; /* sub  color */
+  --color-5: #BED0F3; /* */
 
   --logo-URL: url("https://4.bp.blogspot.com/-ih1-uFmH3AQ/XHkGc5zGWhI/AAAAAAAAGd0/HUSUwI1Rj3UhvANiu2VKy0-5tgw5YaR8gCLcBGAs/s1600/%25EB%25AA%25A8%25EB%25B0%2594%25EC%259D%25BC%2B%25EB%25A1%259C%25EA%25B3%25A0%2B4.png");
   --logo-Width: 158px;
