--- a/gifcolor7.css
+++ b/gifcolor7.css
@@ -1,8 +1,8 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #F2D0D7; /* 로고배경 */
-  --color-2: #CBC5BC; /* 로고배경 공지배경 */
+  --color-1: #B8FBBF; /* 로고배경 */
+  --color-2: #B8FBBF; /* 로고배경 공지배경 */
   --color-3: #50556B; /* main color */
   --color-4: #D0D4D5; /* sub  color */
   --color-5: #FAEDE7; /* */
