--- a/gifcolor8.css
+++ b/gifcolor8.css
@@ -2,7 +2,7 @@
   --color-0: #ffffff; /* box color */
 
   --color-1: #B8FBBF; /* 로고배경 */
-  --color-2: #B8FBBF; /* 로고배경 공지배경 */
+  --color-2: #ADF495; /* 로고배경 공지배경 */
   --color-3: #50556B; /* main color */
   --color-4: #D0D4D5; /* sub  color */
   --color-5: #FAEDE7; /* */
