--- a/gifcolor2.css
+++ b/gifcolor2.css
@@ -1,8 +1,8 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #B8FBBF; /* 로고배경 */
-  --color-2: #D9B4DA; /* 로고배경 공지배경 */
+  --color-1: #ff0000; /* 로고배경 */
+  --color-2: #f3edf5; /* 로고배경 공지배경 */
   --color-3: #50556B; /* main color */
   --color-4: #D0D4D5; /* sub  color */
   --color-5: #FAEDE7; /* */
