--- a/gifcolor5.css
+++ b/gifcolor5.css
@@ -4,7 +4,7 @@
   --color-1: #B8FBBF; /* 로고배경 */
   --color-2: #f3edf5; /* 로고배경 공지배경 */
   --color-3: #50556B; /* main color */
-  --color-4: #D0D4D5; /* sub  color */
+  --color-4: #B36ADA; /* sub  color */
   --color-5: #FAEDE7; /* */
 
   --logo-URL: url("https://2.bp.blogspot.com/-Ae2vU8Tqr88/XHvhvFMtFdI/AAAAAAAAGjU/BBgnV7Yr-Ro3syTF3yAgmJGObXjGZpDCQCLcBGAs/s1600/%25EB%25AA%25A8%25EB%25B0%2594%25EC%259D%25BC%2B%25EB%25A1%259C%25EA%25B3%25A0%2B5.png");
