--- a/gifcolor7.css
+++ b/gifcolor7.css
@@ -3,7 +3,7 @@
 
   --color-1: #B8FBBF; /* 로고배경 */
   --color-2: #f3edf5; /* 로고배경 공지배경 */
-  --color-3: #f3edf5; /* main color */
+  --color-3: #A448DA; /* main color */
   --color-4: #B36ADA; /* sub  color */
   --color-5: #FAEDE7; /* */
 
