--- a/gifcolor.css
+++ b/gifcolor.css
@@ -1,7 +1,7 @@
 ﻿:root {
   --color-0: #ffffff; /* box color */
 
-  --color-1: #ffffff; /* 로고배경 */
+  --color-1: #C39ADA; /* 로고배경 */
   --color-2: #f3edf5; /* 로고배경 공지배경 */
   --color-3: #C39ADA; /* main color */
   --color-4: #B36ADA; /* sub  color */
